Sun Dec 12 03:26:13 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstscrollgraph.[hc]: added label to indicate unconnected 
	output channels.

	* beast-gtk/dialogs/radgets-beast.xml: removed event-box around
	scrollgraph since it has its own outer window now.

Sun Dec 12 00:42:24 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstfiledialog.c: changed storage logic, so overwriting
	files happens by saving to a temporary file and then renaming that.
	this fixes embedded wave data getting lost when saving to existing
	BSE files.

Sat Dec 11 15:34:43 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstscrollgraph.c: don't hide-on-delete the window, to stop
	probing for closed windows.

Fri Dec 10 15:08:07 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstscrollgraph.[hc]: adapt to mix frequency changes.
	delete toplevel automatically when proxy is released. set window title.
	bst_scrollgraph_build_dialog(): build complete dialogs, adjust title.

	* beast-gtk/dialogs/radgets-beast.xml: removed test widgets.

	* bsesource.proc: docu fixes.

	* docs/beast-index.texi: added signals to object doc headline.

Fri Dec 10 12:18:41 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstcanvaslink.c (bst_canvas_link_build_async): changed 
	arrow outline color from blue to black.

Fri Dec 10 11:29:58 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam.c: provide proper warning if scale/dial widget 
	couldn't be created.

	* beast-gtk/bstscrollgraph.c: options fixup.

Fri Dec 10 11:01:28 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstscrollgraph.[hc]: added ::resize-values signal.
	fixed copying of old values. fixed fft-size check upon probe
	notification. added ruler and alignment resizing logic.

	* beast-gtk/dialogs/radgets-beast.xml: scrollgraph dialog adaptions.

Mon Dec  6 23:40:46 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstrecords.idl: added FFTSize choice.

	* beast-gtk/bstutils.[hc]: added fft-size<->int conversion functions.
