@@ -1,0 +1,44 @@
+/* BEAST - Bedevilled Audio System
+ * Copyright (C) 2004 Tim Janik
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General
+ * Public License along with this program; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place, Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+#include "bstbseutils.h"
+
+/* --- BEAST utilities --- */
+BseErrorType
+bst_project_restore_from_file (SfiProxy         project,
+                               const gchar     *file_name)
+{
+  BseErrorType error = bse_project_restore_from_file (project, file_name);
+  /* regardless of how good the restoration worked, try to
+   * keep the resulting project in a GUI usable state.
+   */
+  BseItemSeq *iseq = bse_container_list_children (project);
+  guint i;
+  for (i = 0; i < iseq->n_items; i++)
+    if (BSE_IS_SONG (iseq->items[i]))
+      {
+        /* fixup orphaned parts */
+        bse_song_ensure_track_links (iseq->items[i]);
+        /* songs always need a master bus */
+        bse_song_ensure_master_bus (iseq->items[i]);
+      }
+  return error;
+}
+
+/* --- generated code --- */
+#include "bstgenbseapi.c"
