@@ -19,7 +19,7 @@
 #ifndef __BST_UTILS_H__
 #define __BST_UTILS_H__
 
-#include <bsw/bsw.h>
+#include "bstbseutils.h"
 #include <gtk/gtk.h>
 #include "bstdefs.h"
 #include "bstcluehunter.h"
@@ -27,11 +27,6 @@
 #include "bstgentypes.h"
 
 G_BEGIN_DECLS
-
-/* --- BSE utilities --- */
-BseErrorType   bst_project_restore_from_file  (SfiProxy         project,
-                                               const gchar     *file_name);
-
 
 /* --- GUI utilities --- */
 void           bst_status_eprintf             (BseErrorType     error,
